@@ -26,6 +26,13 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1939: When running as a service, Zope could
+        potentially collect too much log output filling the NT Event
+        Log. When that happened, a 'print' during exception handling
+        would cause an IOError because the service had no 'redirection
+        pipe' anymore (because it's shutting down) to write to,
+        causing the service to not restart automatically.
+
       - Collector #1976: FTP STOR command would load the file being
         uploaded in memory. Changed to use a TemporaryFile.
 
